--- a/src/main/resources/gui/sample.fxml
+++ b/src/main/resources/gui/sample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -8,20 +9,26 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mvc.Controller">
-   <center>
-      <Slider fx:id="mySlider" blockIncrement="1.0" majorTickUnit="10.0" max="0.0" min="-100.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" value="-50.0" BorderPane.alignment="CENTER" />
-   </center>
    <top>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="numberWAPs" text="Label" />
-<<<<<<< HEAD
             <ComboBox fx:id="roomCombo" prefWidth="150.0" promptText="Room" />
-=======
->>>>>>> 20678532519b45e894c99e610a05d55f707056b4
          </children>
       </HBox>
    </top>
+   <bottom>
+      <Slider fx:id="mySlider" blockIncrement="1.0" majorTickUnit="10.0" max="0.0" min="-100.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" value="-50.0" BorderPane.alignment="CENTER" />
+   </bottom>
+   <center>
+      <BarChart fx:id="readingsChart" animated="false" title="Readings" BorderPane.alignment="CENTER">
+        <xAxis>
+          <CategoryAxis fx:id="waps" label="WAPs" side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis label="Readings" side="LEFT" />
+        </yAxis>
+      </BarChart>
+   </center>
 </BorderPane>
