--- a/src/main/resources/gui/sample.fxml
+++ b/src/main/resources/gui/sample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -14,7 +15,34 @@
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="numberWAPs" text="Label" />
-            <ComboBox fx:id="roomCombo" prefWidth="150.0" promptText="Room" />
+            <HBox prefHeight="65.0" prefWidth="419.0" spacing="10.0">
+               <children>
+                  <VBox>
+                     <children>
+                        <RadioButton fx:id="kitchen" mnemonicParsing="false" onAction="#handleButtonAction" text="Kitchen" />
+                        <RadioButton fx:id="diningroom" mnemonicParsing="false" onAction="#handleButtonAction" text="Dining room" />
+                        <RadioButton fx:id="balcony" mnemonicParsing="false" onAction="#handleButtonAction" text="Balcony" />
+                        <RadioButton fx:id="bedroom1" mnemonicParsing="false" onAction="#handleButtonAction" text="Bedroom1" />
+                        <RadioButton fx:id="bedroom2" mnemonicParsing="false" onAction="#handleButtonAction" text="Bedroom2" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="94.0" prefWidth="127.0">
+                     <children>
+                        <RadioButton fx:id="bedroom3" mnemonicParsing="false" onAction="#handleButtonAction" text="Bedroom3" />
+                        <RadioButton fx:id="corridor" mnemonicParsing="false" onAction="#handleButtonAction" text="Corridor" />
+                        <RadioButton fx:id="drawingroom" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="18.0" prefWidth="183.0" text="Drawing room" />
+                        <RadioButton fx:id="wc1" mnemonicParsing="false" onAction="#handleButtonAction" text="WC1" />
+                        <RadioButton fx:id="wc2" mnemonicParsing="false" onAction="#handleButtonAction" text="WC2" />
+                     </children>
+                  </VBox>
+               </children>
+               <padding>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </padding>
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin>
+            </HBox>
          </children>
       </HBox>
    </top>
