--- a/src/main/resources/gui/sample.fxml
+++ b/src/main/resources/gui/sample.fxml
@@ -3,15 +3,12 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mvc.Controller">
-   <top>
+   <!--<top>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="65.0" prefWidth="419.0" spacing="10.0">
@@ -44,7 +41,25 @@
             </HBox>
          </children>
       </HBox>
-   </top>
+   </top>-->
+
+   <left>
+      <VBox alignment="CENTER" spacing="10">
+         <children>
+            <ImageView fitHeight="400" fitWidth="300" onMouseClicked="#handleImageClicked">
+               <image>
+                  <Image url="/gui/planoEscaladoColores.jpg"/>
+               </image>
+            </ImageView>
+         </children>
+         <padding>
+            <Insets left="10" right="10" top="10" bottom="10"/>
+         </padding>
+         <children>
+            <Button fx:id="changeHouse" text="Change house" onAction="#handleHouseLoadButtonAction"></Button>
+         </children>
+      </VBox>
+   </left>
 
    <bottom>
       <Slider fx:id="mySlider" blockIncrement="1.0" majorTickUnit="10.0" max="0.0" min="-150.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" value="-150.0" BorderPane.alignment="CENTER" />
