Ahora todos los datos se cargan del fichero json, cambiando la imagen por otra dentro del proyecto podrá probarse. Los nombres de las habitaciones también podrán cambiarse. Falta revisar el código en busca de fallos y refactorizar un poco.

--- a/src/main/resources/gui/sample.fxml
+++ b/src/main/resources/gui/sample.fxml
@@ -46,9 +46,9 @@
    <left>
       <VBox alignment="CENTER" spacing="10">
          <children>
-            <ImageView fitHeight="400" fitWidth="300" onMouseClicked="#handleImageClicked">
+            <ImageView fx:id="houseImage" fitHeight="400" fitWidth="300" onMouseClicked="#handleImageClicked">
                <image>
-                  <Image url="/gui/planoEscaladoColores.jpg"/>
+
                </image>
             </ImageView>
          </children>
