--- a/classes/production/WiFiDataAnalyzer/gui/sample.fxml
+++ b/classes/production/WiFiDataAnalyzer/gui/sample.fxml
@@ -7,6 +7,7 @@
 
 <?import javafx.scene.image.ImageView?>
 
+<?import com.sun.javafx.charts.Legend?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mvc.Controller">
 
     <top>
@@ -35,19 +36,26 @@
     </left>
 
     <bottom>
-        <Slider fx:id="mySlider" blockIncrement="1.0" majorTickUnit="10.0" max="0.0" min="-150.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" value="-150.0" BorderPane.alignment="CENTER" />
+        <VBox alignment="CENTER">
+            <Slider fx:id="mySlider" blockIncrement="1.0" majorTickUnit="10.0" max="0.0" min="-150.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" value="-150.0" BorderPane.alignment="CENTER"/>
+            <padding>
+                <Insets left="10" right="10" bottom="10"/>
+            </padding>
+            <Label>Received Signal Strength</Label>
+        </VBox>
+
     </bottom>
 
     <center>
         <VBox>
-            <TabPane>
-                <Tab text="Readings Chart" closable="false">
+            <TabPane VBox.vgrow="ALWAYS">
+                <Tab text="Intensity Chart" closable="false">
                     <BarChart fx:id="readingsChart" animated="false" title="Readings" BorderPane.alignment="CENTER">
                         <xAxis>
                             <CategoryAxis fx:id="waps" label="WAPs" side="BOTTOM"/>
                         </xAxis>
                         <yAxis>
-                            <NumberAxis label="Readings" side="LEFT"/>
+                            <NumberAxis label="Porcentual number of readings" side="LEFT" autoRanging="false" upperBound="110"/>
                         </yAxis>
                     </BarChart>
                 </Tab>
