--- a/src/main/resources/gui/sample.fxml
+++ b/src/main/resources/gui/sample.fxml
@@ -7,7 +7,6 @@
 
 <?import javafx.scene.image.ImageView?>
 
-<?import com.sun.javafx.charts.Legend?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mvc.Controller">
 
     <top>
@@ -55,7 +54,7 @@
                             <CategoryAxis fx:id="waps" label="WAPs" side="BOTTOM"/>
                         </xAxis>
                         <yAxis>
-                            <NumberAxis label="Porcentual number of readings" side="LEFT" autoRanging="false" upperBound="110"/>
+                            <NumberAxis label="Percentual number of readings" side="LEFT" autoRanging="false" upperBound="110"/>
                         </yAxis>
                     </BarChart>
                 </Tab>
